# build-cleaner

./: .gitignore  Cargo.toml  README-eng.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: README.md  ci.yml  npm-publish.yml  release.yml
.husky/: pre-commit
cli/: Cargo.toml  README-eng.md  README.md
cli/src/: args.rs  executor.rs  interactive.rs  main.rs  output.rs
core/: Cargo.toml  README-eng.md  README.md
core/src/: config.rs  delete.rs  error.rs  lib.rs  log.rs  report.rs  search.rs
docs/: original-design.md
npm/: README-eng.md  README.md  package.json  tsconfig.json
npm/src/: cli-invoker.ts  cli.ts  config.ts  delete.ts  index.ts  search.ts  types.ts
raycast/: .prettierrc.mjs  CHANGELOG.md  README-eng.md  README.md  eslint.config.mjs  package.json  raycast-env.d.ts  tsconfig.json
raycast/src/: index.ts  index.tsx  types.ts
raycast/src/components/: CleanAction.tsx  ConfirmDialog.tsx  PathInput.tsx  PatternSelector.tsx  ResultView.tsx  SettingsView.tsx
raycast/src/constants/: patterns.ts
raycast/src/hooks/: useClean.ts  usePathSuggestions.ts
raycast/src/utils/: format.ts  path.ts
