[workspace]
members = ["core", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["xjiaxiang"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
trash = "5.0"