[package]
name = "build-cleaner-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for build-cleaner providing search and delete functionality"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
trash = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "build_cleaner_core"
path = "src/lib.rs"

